--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,9 @@
 # Étape 1 : Construire l'application
-FROM node:22-alpine AS build
-
+FROM node:22-alpine
 WORKDIR /app
-COPY package*json ./
+COPY package.json .
 RUN npm install
 COPY . .
-RUN npm run build
+EXPOSE 3000
+CMD ["npm", "run", "dev"]
 
-# Étape 2 : Servir l'application
-FROM nginx:stable
-
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
