--- a/backend-service/src/main/resources/application.properties
+++ b/backend-service/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=backend-service
 server.port=8081
+
+# Database configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://mysql:3306/messageappdatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql: true
