--- a/api-service/src/main/resources/application.properties
+++ b/api-service/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=api-service
 server.port=8080
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.topic=message-topic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
