🚧 Backend can consume message

--- a/backend-service/src/main/resources/application.properties
+++ b/backend-service/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: true
+
+# Kafka configuration
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.topic=message-topic
+spring.kafka.consumer.groupId=backend-consumer
+spring.kafka.common.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.common.value-serializer=org.apache.kafka.common.serialization.StringSerializer
